# mdserver

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
ext/: content.js  editor-bundle.css  editor-bundle.js  manifest.json  styles.css
ext/editor-src/: index.jsx  package-lock.json  package.json
src/: cache.rs  config.rs  index.rs  introspect.rs  main.rs  markdown.rs  server.rs
